bug fix with url

--- a/app/views/categories/dashboard.html.erb
+++ b/app/views/categories/dashboard.html.erb
@@ -40,7 +40,7 @@
 					<div class="chart-card d-inline-flex card" style="width: 49%;">
 						<div class="card-body">
 							<div class="mb-3" id="chartContainer2" style="height: 300px; width: 100%;"></div>
-							<a class="text-align-center bottom-link" href="/newsletters"><p class="mb-0 text-white bg-dark text-center">View Newsletters Sent</p></a>
+							<a class="text-align-center bottom-link" href="/newsletters/manage/<%= @user.slug %>"><p class="mb-0 text-white bg-dark text-center">View Newsletters Sent</p></a>
 						</div>
 					</div>
 				</div>
