--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,7 +29,7 @@
   </div>
   <h1 id="page_title" style="margin-bottom: -20px; border-bottom: none;">Writers</h1>
   <% else %>
-  <h1 id="page_title" style="margin-bottom: -20px; border-bottom: none;"><%= @category.name.capitalize %> Subscribers</h1>
+  <h1 id="page_title" style="margin-bottom: -20px; border-bottom: none;"><%= @category.name.titleize %> Subscribers</h1>
 <% end %>
 <div id="posts_wrapper" class="skinny_wrapper">
   <div class="flex_horizontal">
