--- a/app/views/users/onboarding/_profile_preview.html.erb
+++ b/app/views/users/onboarding/_profile_preview.html.erb
@@ -41,7 +41,7 @@
       <%= f.hidden_field :approved_profile, :value => false %>
     <% end %>
     <div style="position: relative; float: right;">
-      <div class="hide spinner-button spinner-border" style="margin-left: 60px; margin-top: 27px;" role="status">
+      <div class="hide spinner-button spinner-border" style="margin-left: 60px;" role="status">
         <span class="sr-only">Loading...</span>
       </div>
       <%= f.button "Submit & Continue", class: "onboarding_button", id: "submit-comment-modal-button" %>
