--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -16,10 +16,17 @@
       <!-- Grid column -->
       <div>
         <!-- Links -->
-        <h6 class="font-weight-bold text-uppercase">About</h6>
+        <h6 class="font-weight-bold text-uppercase">Quick Links</h6>
         <ul class="list-unstyled">
           <li>
             <a href="/about-us">About us</a>
+          </li>
+          <li><%= link_to "Log in", '/login' %></li>
+          <li>
+            <a href="/search?utf8=✓&filter=all+articles">All Articles</a>
+          </li>
+          <li>
+            <a href="/search?utf8=✓&filter=writers">Writers</a>
           </li>
           <li>
             <a href="/privacy-policy">Privacy Policy</a>
@@ -27,32 +34,28 @@
           <li>
             <a href="/copyright-policy">Copyright Policy</a>
           </li>
-          <li>
-            <a href="/search?utf8=✓&filter=all+articles">Search in All Articles</a>
-          </li>
-          <li>
-            <a href="/search?utf8=✓&filter=writers">Search in Writers</a>
-          </li>
         </ul>
       </div>
-      <!-- Grid column -->
       <!-- Grid column -->
       <div>
         <!-- Links -->
-        <h6 class="font-weight-bold text-uppercase">Quick Links</h6>
+        <h6 class="font-weight-bold text-uppercase">Categories</h6>
         <ul class="list-unstyled">
-          <li><%= link_to "Log in", get_profile_path %></li>
-          <li><a href="/community">Community</a></li>
-          <li><a href="/categories/interviews">Interviews</a></li>
-          <li><a href="/categories/student-life">Student Life</a></li>
-          <li><a href="/categories/wellness">Wellness</a></li>
-          <li><a href="/categories/beauty-style">Beauty & Style</a></li>
-          <li><a href="/categories/pop-culture">Pop Culture</a></li>
-          <li><a href="/categories/relationships">Relationships</a></li>
-          <li><a href="/categories/opinion">Opinion</a></li>
+          <% @categories[0].each do |category| %>
+            <li><a href="/categories/#{category.slug}"><%= category.name&.titleize %></a></li>
+          <% end %>
         </ul>
       </div>
       <!-- Grid column -->
+      <div>
+        <!-- Links -->
+        <h6 class="font-weight-bold text-uppercase">Categories</h6>
+        <ul class="list-unstyled">
+          <% @categories[1].each do |category| %>
+            <li><a href="/categories/#{category.slug}"><%= category.name&.titleize %></a></li>
+          <% end %>
+        </ul>
+      </div>
       <!-- Grid column -->
       <div>
         <!-- Links -->
