--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -86,7 +86,7 @@
       <%= f.check_box :admin %><br />
     <% end %>
     <br>
-    <% if current_user && current_user.is_interviewer_manager? %>
+    <% if current_user && current_user.admin? && current_user.is_interviewer_manager? %>
       <%= f.label "Interviewer" %>
       <%= f.check_box :marketer %><br />
     <% end %>
