--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -37,26 +37,28 @@
         </ul>
       </div>
       <!-- Grid column -->
-      <div>
-        <!-- Links -->
-        <h6 class="font-weight-bold text-uppercase">Categories</h6>
-        <ul class="list-unstyled">
-          <% @categories[0].each do |category| %>
-            <li><a href="/categories/#{category.slug}"><%= category.name&.titleize %></a></li>
-          <% end %>
-        </ul>
-      </div>
-      <!-- Grid column -->
-      <div>
-        <!-- Links -->
-        <h6 class="font-weight-bold text-uppercase">Categories</h6>
-        <ul class="list-unstyled">
-          <% @categories[1].each do |category| %>
-            <li><a href="/categories/#{category.slug}"><%= category.name&.titleize %></a></li>
-          <% end %>
-        </ul>
-      </div>
-      <!-- Grid column -->
+      <% if @categories_footer && @categories_footer.length > 1 %>
+        <div>
+          <!-- Links -->
+          <h6 class="font-weight-bold text-uppercase">Categories</h6>
+          <ul class="list-unstyled">
+              <% @categories_footer[0].each do |category| %>
+                <li><a href="/categories/#{category.slug}"><%= category.name&.titleize %></a></li>
+              <% end %>
+          </ul>
+        </div>
+        <!-- Grid column -->
+        <div>
+          <!-- Links -->
+          <h6 class="font-weight-bold text-uppercase">Categories</h6>
+          <ul class="list-unstyled">
+            <% @categories_footer[1].each do |category| %>
+              <li><a href="/categories/#{category.slug}"><%= category.name&.titleize %></a></li>
+            <% end %>
+          </ul>
+        </div>
+        <!-- Grid column -->
+      <% end %>
       <div>
         <!-- Links -->
         <h6 class="font-weight-bold text-uppercase">Get in Touch</h6>
