--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -51,8 +51,6 @@
           <i class="mt-4 d-block">See more pitches <%= link_to("here", pitches_path, class: "link_inline link_grn") %></i>
           <br>
         </div>
-        <%= link_to("Extensions page", "/writers/#{@user.slug}/extensions", class: "link_grn") %><br>
-        <%= link_to("Invite a friend", "/writers/#{@user.slug}/invitations", class: "link_grn") %><br>
         <%= link_to("Email preferences", "/email-preferences?email=#{@user.subscriber&.email}&token=#{@user.subscriber&.token}", class: "link_grn") %><br>
         <div class="links"
           <% if @show_onboarding_full %>
@@ -60,8 +58,11 @@
           <% end %>
         >
           <div>
+            <%= link_to("Interviewer Application", "https://forms.gle/owee6FsULPaT7W7x5", class: "link_grn") %><br>
             <%= link_to("Editor Application", "/applications/editor", class: "link_grn") %><br>
           </div>
+          <%= link_to("Extensions page", "/writers/#{@user.slug}/extensions", class: "link_grn") %><br>
+          <%= link_to("Invite a friend", "/writers/#{@user.slug}/invitations", class: "link_grn") %><br>
         </div>
         <br>
       </div>
