--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -86,7 +86,7 @@
       <%= f.check_box :admin %><br />
     <% end %>
     <br>
-    <% if current_user && (current_user.admin? || current_user.is_manager_of_category('interviews')) %>
+    <% if current_user && (current_user.is_manager_of_category(Category.find('interviews').id)) %>
       <%= f.label "Interviewer" %>
       <%= f.check_box :marketer %><br />
     <% end %>
