--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,9 +19,25 @@
 
   <% if current_user && current_user.is_manager? && @user.editor %>
     <%= f.label "Skip editor assignment", :class => "ml-2" %>
-    <%= f.check_box :skip_assignment %>
+    <%= f.check_box :skip_assignment %><br />
   <% end %>
 
+  <% if current_user && (current_user.is_manager_of_category(Category.find('interviews').id) || current_user.admin?) %>
+    <%= f.label "Interviewer" %>
+    <%= f.check_box :marketer %>
+  <% end %>
+
+  <% if current_user && current_user.admin? %>
+    <%= f.label "Editor", :class => "ml-2" %>
+    <%= f.check_box :editor %>
+  <% end %>
+
+  <% if current_user && current_user.admin? %>
+    <%= f.label "Admin", :class => "ml-2" %>
+    <%= f.check_box :admin %>
+  <% end %>
+    
+  <br>
   <br>
 
   <% if current_user.admin? || (current_user.id.eql? @user.id) %>
@@ -75,23 +91,8 @@
     </div>
 
     <%= f.hidden_field :posts_count, :value => @user.posts.published.count %>
-
-    <% if current_user && current_user.admin? %>
-      <%= f.label "Editor" %>
-      <%= f.check_box :editor %><br />
-    <% end %>
-
-    <% if current_user && current_user.admin? %>
-      <%= f.label "Admin" %>
-      <%= f.check_box :admin %><br />
-    <% end %>
-    <br>
-    <% if current_user && (current_user.is_manager_of_category(Category.find('interviews').id)) %>
-      <%= f.label "Interviewer" %>
-      <%= f.check_box :marketer %><br />
-    <% end %>
-    <br>
   <% end %>
+  <br>
 
 <%= f.submit "Update Profile" %>
 
