--- a/app/views/comments/_form_inline.html.erb
+++ b/app/views/comments/_form_inline.html.erb
@@ -1,4 +1,4 @@
-<%= form_for comment, remote: true, :html => {id: dom_id(comment, 'form_inline')} do |f| %>
+<%= form_for comment, remote: true, :html => {id: dom_id(comment, 'form_inline'), honeypot: true} do |f| %>
   <li class="comment_form_wrapper form_inline_wrapper list-group-item comment" style="width: 100%;">
     <% if (current_user.present? && ((comment.user_id.eql? current_user.id) || (comment.post.user_id.eql? current_user.id) || (current_user.admin))) || (cookie.eql? comment.cookie) %>
       <%= link_to comment_path(comment), method: :delete, data: {confirm: "Are you sure you want to delete this comment?"}, class: "delete_btn_x", :remote => true, :style => "width: 15px !important;right: 0;position: absolute;z-index: 10;" do %>
