--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -14,8 +14,8 @@
   <br><%= f.label "Managing Editor Slug ID (last part of url on their profile)" %><br>
   <% @user = @category.user.present? ? @category.user.slug : '' %>
   <%= f.text_field 'managing_editor', value: @user, placeholder: current_user.slug %>
-  <br><%= f.label "Image" %><br>
-  <%= f.file_field :image %>
+  <br><%= f.label "Color Theme" %><span>(hex code) see https://htmlcolorcodes.com/ for colors or install a color picker on chrome to get the color code.</span><br>
+  <%= f.text_field :color, placeholder: "#FF5733" %>
   <br />
   <br><%= f.submit "Save Category" %><br><br>
 <%end%>
