--- a/app/views/categories/dashboard.html.erb
+++ b/app/views/categories/dashboard.html.erb
@@ -30,22 +30,22 @@
 						</div>
 					</div>
 				</div>
-				<div class="mt-4 d-flex flex-row flex-wrap justify-content-between">
-					<div class="chart-card d-inline-flex card" style="width: 49%;">
+				<div class="d-flex flex-row flex-wrap justify-content-between">
+					<div class="mt-4 chart-card d-inline-flex card" style="width: 49%;">
 						<div class="card-body">
 							<div class="mb-3" id="chartContainer1" style="height: 300px; width: 100%;"></div>
 							<a class="text-align-center bottom-link" href="/categories/<%= @category.slug %>"><p class="mb-0 text-white bg-dark text-center">View Published Articles</p></a>
 						</div>
 					</div>
-					<div class="chart-card d-inline-flex card" style="width: 49%;">
+					<div class="mt-4 chart-card d-inline-flex card" style="width: 49%;">
 						<div class="card-body">
 							<div class="mb-3" id="chartContainer2" style="height: 300px; width: 100%;"></div>
 							<a class="text-align-center bottom-link" href="/newsletters/manage/<%= @user.try(:slug) %>"><p class="mb-0 text-white bg-dark text-center">View Newsletters Sent</p></a>
 						</div>
 					</div>
 				</div>
-				<div class="mt-4 d-flex flex-row flex-wrap justify-content-between">
-					<div class="chart-card d-inline-flex card" style="width: 49%;">
+				<div class="d-flex flex-row flex-wrap justify-content-between">
+					<div class="mt-4 chart-card d-inline-flex card" style="width: 49%;">
 						<div class="card-body category-dashboard-card dashboard-card">
 							<div class="stats_wrapper">
 								<h1 class="mb-0 d-block text-center value" id="value1"></h1>
@@ -58,7 +58,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="chart-card d-inline-flex card" style="width: 49%;">
+					<div class="mt-4 chart-card d-inline-flex card" style="width: 49%;">
 						<div class="card-body category-dashboard-card dashboard-card">
 							<div class="stats_wrapper">
 								<h1 class="mb-0 d-block text-center value" id="value2"></h1>
