--- a/app/views/pages/trending.html.erb
+++ b/app/views/pages/trending.html.erb
@@ -6,39 +6,9 @@
   </div>
   <div class="category--show">
     <div class="other--articles">
-      <div class="flex">
-        <div class="container">
-          <% @trending.each do |post| %>
-            <div class="thumbnail">
-              <div class="container--image">
-                <%= link_to(post) do %>
-                <div class="w-100 position-relative">
-                  <% if post.rank.present? && post.rank <= 5 %>
-                    <span class="badge badge-pink" style="position: absolute; z-index: 10000; top: 5px; left: 5px;">trending in <%= post.category.name %> 🔥</span>
-                  <% end %>
-                  <%= render 'posts/partials/header_image', post: post, img_class: "image_thumbnail" %>
-                </div>
-              <% end %>
-              </div>
-              <div class="thumbnail--container">
-                <h3 class="article_title">
-                  <%= link_to post.title, post %>
-                </h3>
-                <p class="date_post_preview"><%= date_to_words(post.publish_at) %></p>
-                <% if post.post_impressions >= 1000 %>
-                  <p class="date_post_preview">
-                    <svg width="15px" height="15px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" class="svg-inline--fa fa-eye fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path></svg> <%= format_number_category(post.post_impressions) %> views
-                  </p>
-                <% end %>
-                <%= render 'posts/partials/views_and_comments', post: post %>
-                <%= render "/posts/partials/admin_stats", post: post, show_priority: false %>
-              </div>
-            </div>
-          <% end %>
-        </div>
-        <a class="apply" href="/apply" target="blank"></a>
+      <div id="promoted-posts" class="ctgry_section">
+        <%= render 'posts/partials/promoted/promoted_page', posts: @trending %>
       </div>
-      <%== pagy_nav(@pagy).html_safe %>
     </div>
   </div>
 </div>
