--- a/app/views/posts/partials/promoted/_all_promoted_articles.html.erb
+++ b/app/views/posts/partials/promoted/_all_promoted_articles.html.erb
@@ -2,7 +2,7 @@
   <div class="wrapper_home">
     <h1 id="promoted-posts-title" class="section--title"><a href="/">what other teens are reading rn</a></h1>
     <div id="promoted-posts" class="ctgry_section">
-      <%= render partial: 'posts/partials/promoted/promoted_page' %>
+      <%= render 'posts/partials/promoted/promoted_page', posts: @posts_promoted %>
     </div>
     <% if @posts_promoted_records.count > @per_page  %>
       <div id="div_next_link_articles">
