--- a/app/views/categories/team.html.erb
+++ b/app/views/categories/team.html.erb
@@ -20,15 +20,18 @@
   </div>
   <div class="wrapper_home">
     <h1 id="page_title" style="border-bottom: none; margin-top: 0px; padding-bottom: 20px;">Managing Editor</h1>
-    <div class="d-flex">
-        <%= render :partial => 'users/profile', locals: {user: User.first} %>
+    <div style="max-width: 800px; margin: 0 auto;" class="d-flex">
+        <%= render :partial => 'users/profile', locals: {user: @managing_editor} %>
     </div>
     <h1 id="page_title" style="border-bottom: none; margin-top: 0px; padding-bottom: 20px;">Contributors</h1>
     <div class="d-flex flex-row flex-wrap w-100 mt-4">
         <% @team.each do |user| %>
-        <%= render :partial => 'users/profile_minimal', locals: {user: user} %>
+            <div class="p-4">
+                <%= render :partial => 'users/profile_minimal', locals: {user: user} %>
+            </div>
         <% end %>
     </div>
   </div>
+    <p class="text-center">Want to write for The Teen Magazine? Apply <%= link_to "here", new_apply_path %>.</p>
   <%== pagy_nav(@pagy).html_safe %>
 </div>
