--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -96,11 +96,9 @@
         <div id="content">
           <div class="flex_wrapper_content">
             <div class="post_wrapper">
-              <div id="selectable_content" class="post_content">
+              <div id="selectable_content" class="post_content <%= @post.agree_to_image_policy ? '' : 'image-policy-not-agreed-to' %>">
                 <%= markdown @post.content %>
               </div>
-              <%# TODO add likes to published articles %>
-              <%# <%= render :partial => 'posts/partials/likes' %>
               <% if current_user && current_user.can_edit_post(@post) %>
                 <div id="admin_links" style="border-top: 1px solid #E9E9E9;border-bottom: 1px solid #E9E9E9;text-align: center;padding: 1em 0;margin: 1em 0;margin-top: 0;">
                   <% if !(@post.is_locked?) %>
